--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
     EJS_player = '#game';
     EJS_biosUrl = 'GBA-BIOS.bin';
-    EJS_gameUrl = 'Pokemon - Emerald Crest (v.1.08.2).zip'; // Url to Game rom
+    EJS_gameUrl = 'Pokemon Unbound 2.0.zip'; // Url to Game rom
     EJS_core = 'gba';
 </script>
 <script src="loader.js"></script>
