--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
         <div id="game"></div>
       </div>
 <script type="text/javascript">
+    EJS_gameID = 1;
     EJS_player = '#game';
     EJS_biosUrl = 'GBA-BIOS.bin';
     EJS_gameUrl = 'Pokemon Unbound 2.0.zip'; // Url to Game rom
     EJS_core = 'gba';
+    EJS_oldCores = true;
 </script>
 <script src="loader.js"></script>
